<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">浣客洗衣</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- 账户登陆页面 -->
    <string name="login_phone">请正确输入手机号</string>
    
  <string name="start_pay">设置支付密码</string>
  <string name="new_password">新密码</string>
  <string name="queding">确定</string>
  <string name="affirm_newpassword">确认新密码</string>
 
  
  
  <!-- 洗衣篮 -->
   <string name="basket_title">洗衣篮</string>
    <string name="cancel_order">删除订单</string>
     <string name="user_message">用户信息</string>
     <string name="write">填写</string>
    <string name="basket1">洗衣劵</string>
     <string name="basket2">点击使用</string>
     <string name="basket3">立即支付</string>
     <string name="basket4">合计</string>
     
     <!-- 更多 -->
      <string name="kefu">联系客服</string>
      <string name="problem">常见问题</string>
      <string name="fuwufanwei">服务范围</string>
       <string name="about">关于我们</string>
       <string name="xieyi">用户协议</string>
        <string name="feedback">意见反馈</string>
        
        
        
        <!-- 洗衣币 -->
         <string name="xiyibi_title">我的洗衣币</string>
         <string name="recharge">充值</string>
          <string name="sum">金额</string>
         <string name="recharge_sum">请输入充值金额</string>
          <string name="alipay_recharge">支付宝充值</string>
          <string name="password_manage">密码管理</string>
          <string name="xiyibi_text1">充500</string>
            <string name="xiyibi_text2">送100</string>
            <string name="xiyibi_text3">元</string>
            <string name="xiyibi_text4">充800</string>
             <string name="xiyibi_text5">送200</string>
             <string name="xiyibi_text6">充1500</string>
             <string name="xiyibi_text7">送500</string>
             
          <!-- 优惠码分享 -->
         <string name="share_title">分享推荐码</string>
         <string name="share_1">邀请好友，获得免费洗衣</string>
         <string name="share_2">向朋友分享洗衣推荐码，朋友在该</string>
         <string name="share_3">平台首次使用你的推荐码消费后，您也将获得相</string>
         <string name="share_4">应金额的洗衣劵</string>
          <string name="shares">推荐码</string>
            <string name="shares5">分享推荐码</string>
          
          <!-- 验证优惠码-->
          <string  name="verify_edt">请输入推荐序号</string>
          <string name="verify_confirm">确定</string>
          
          <!-- 洗衣币密码管理 -->
          <string name="xiyibi_password">洗衣币密码管理</string>
          <string name="xiyibi_password1">洗衣币密码</string>
           <string name="xiyibi_password2">修改密码</string>
            <string name="xiyibi_password3">重置密码</string>
            <string name="xiyibi_password4">退出登陆</string>
            
             <!-- 洗衣币修改密码 -->
          <string name="xiyibi_chang_password">修改密码</string>
          <string name="xiyibi_chang_password1">旧密码</string>
           <string name="xiyibi_chang_password2">请输入旧密码</string>
            <string name="xiyibi_chang_password3">新密码</string>
            <string name="xiyibi_chang_password4">请输入新密码</string>
            <string name="xiyibi_chang_password5">请再次输入新密码</string>
            <string name="xiyibi_chang_password6">保存</string>
            
            
            <!-- 支付 -->
           <string name="pay">支付</string>
            <string name="pay1">余额支付</string>
            <string name="pay2">支付宝支付</string>
            <string name="pay3">洗衣币余额(元)</string>
            <string name="pay4">充值</string>
            <string name="pay5">请输入支付密码</string>
            <string name="pay6">确认支付</string>
             <string name="pay7">忘记密码</string>
             
             <!-- 账户管理 -->
             <string name="myaccount">我的账户</string>
               <string name="myaccount1">我的洗衣币</string>
                <string name="myaccount2">我的洗衣劵</string>
                
                <!-- 洗衣劵 -->
                <string  name="xiyijuan_title">洗衣劵</string>
                
                <!-- 我的订单 /代送件-->
                <string  name="ordernumber">订单号:</string>
                 <string  name="order_date">订单日期:</string>
                 <string  name="status">交易状态:</string>
                 
                 <!-- 退出登陆 -->
                 <string   name="exit">亲，确定要退出本次登陆吗？</string>   
                  <string   name="exit1">退出程序</string> 
                  <string   name="exit2">取消</string>
             <!-- 洗衣劵 -->    
               <string   name="xiyijuan1">还有</string> 
               <string   name="xiyijuan2">天过期</string> 
               <!-- 拨打客户电话弹窗-->
               <string    name="kefu1">确定要拨打电话吗？</string>
               <string    name="kefu2">确定</string>
                <string    name="kefu3">取消</string>
                
                
                <!-- 地址 -->
                <string    name="location1">区域</string>
                <!-- 小区索引 -->
                 <string    name="index1">小区地址</string>
                  <string    name="index2">请输入小区</string>
                  <!-- 使用规则 -->
                  <string    name="server_explain1">分享说明</string>
                  <string    name="server_explain2">分享你的推荐码给好友，您和好友各得1个大礼包奖励；</string>
                  <string    name="server_explain3">好友兑换大礼包：通过您发出的分享邀请，好友在下载并成功安装APP注册后，在App"验证推荐码"页填写您的推荐码兑换。好友必须是新用户且未使用过洗衣服务；</string>
                   <string    name="server_explain4">好友首次洗衣付费成功后，您即可获得1个大礼包奖励。洗衣付费成功定义：好友使用余额或支付宝成功支付订单；</string>
                    <string    name="server_explain5">分享推荐码，你将获得数量无上限的礼包奖励.</string>
                     <string    name="server_explain6">非正常途径获得的优惠劵奖励无效，浣客洗衣保留最终解释权</string>
                     
                      <!-- 服务说明 -->
                       <string    name="server1">成都市已开通服务，主要区域为三环路以内区域和高新区</string>
                        <string    name="server2">涴客洗衣</string>
</resources>
