<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
      android:layout_height="@dimen/DIMEN_98PX"
        android:background="@android:color/white">
    <ImageButton 
        android:id="@+id/return6"
       android:layout_width="@dimen/DIMEN_120PX"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:src="@drawable/rentun"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_title"
        android:textColor="@color/zi_yi"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        />
   <Button
       android:id="@+id/btn_regulations"
        android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="分享说明"
       android:background="@null"
       android:layout_centerVertical="true"
       android:layout_marginRight="@dimen/DIMEN_34PX"
       android:textColor="@color/main_color"
       android:layout_alignParentRight="true"/>
</RelativeLayout>
<View android:layout_width="match_parent"
    android:layout_height="@dimen/DIMEN_3PX"
    android:background="@color/line"/>
    <ImageView 
        android:layout_marginTop="@dimen/DIMEN_45PX"
        android:layout_marginBottom="@dimen/DIMEN_45PX"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_198PX"
         android:layout_marginLeft="@dimen/DIMEN_70PX"
        android:layout_marginRight="@dimen/DIMEN_70PX"
        android:background="@drawable/privilege_image"
        android:layout_gravity="center_horizontal"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/share_1"
        android:textSize="20sp"
        android:textColor="@color/zi_er"/>
    <ImageView 
        android:layout_marginTop="@dimen/DIMEN_28PX"
        android:layout_marginBottom="@dimen/DIMEN_28PX"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/DIMEN_70PX"
        android:layout_marginRight="@dimen/DIMEN_70PX"
        android:layout_height="wrap_content"
        android:background="@drawable/share_line"/>
    
     <TextView 
         android:layout_marginTop="@dimen/DIMEN_23PX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shares"
        android:textSize="16sp"
        android:textColor="@color/zi_er"/>"
     <TextView 
         android:id="@+id/tuijiantext"
         android:layout_marginTop="@dimen/DIMEN_23PX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/money"
         android:textSize="26sp"
         />
     <Button 
         android:layout_marginTop="@dimen/DIMEN_88PX"
         android:id="@+id/btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/fenxiang"
      />
     <TextView  
         android:layout_marginTop="@dimen/DIMEN_12PX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/shares5"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/zi_er"/>
</LinearLayout>
